@startuml

title __UI's Class Diagram__\n

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      class co.siarhei.apps.android.geochat.UI.MainConnectionsFragment {
          + prefs : SharedPreferences
          ~ firestore : FirebaseFirestore
          ~ mAuth : FirebaseAuth
          ~ rootView : View
          - cd : CompositeDisposable
          - rv_users : RecyclerView
          + onCreate()
          + onCreateView()
          - setupReactiveGeoUpdates()
          - setupRecyclerView()
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      class co.siarhei.apps.android.geochat.UI.MainExploreFragment {
          + prefs : SharedPreferences
          ~ firestore : FirebaseFirestore
          ~ mAuth : FirebaseAuth
          ~ rootView : View
          - cd : CompositeDisposable
          - rv_users : RecyclerView
          + getCurrentRadius()
          + onCreate()
          + onCreateView()
          - setupReactiveUpdates()
          - setupRecyclerView()
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      class co.siarhei.apps.android.geochat.UI.MainThisAreaFragment {
          - OkHTTP_Client : OkHttpClient
          - cd : CompositeDisposable
          - currentLocation : Location
          - firestore : FirebaseFirestore
          - googleAPIKey : String
          - mMapButton : LinearLayout
          - mMapButtonSubtitle : TextView
          - mMapButtonTitle : TextView
          - mSendButton : ImageButton
          - mTextSend : EditText
          - prefs : SharedPreferences
          - rootView : View
          + getCurrentRadius()
          + onActivityResult()
          + onCreate()
          + onCreateView()
          + onResume()
          + setCurrentLocation()
          + setCurrentLocation()
          + setCurrentRadius()
          + setupMapButtonGeocoding()
          + setupMessageListView()
          ~ getGoogleAPIKey()
          - openMapActivity()
          - setupMapButton()
          - setupSendButton()
      }
    }
  }
  

  co.siarhei.apps.android.geochat.UI.MainConnectionsFragment -up-|> androidx.fragment.app.Fragment
  co.siarhei.apps.android.geochat.UI.MainConnectionsFragment o-- co.siarhei.apps.android.geochat.UI.Adapters.UserAdapter : usersAdapter
  co.siarhei.apps.android.geochat.UI.MainExploreFragment -up-|> androidx.fragment.app.Fragment
  co.siarhei.apps.android.geochat.UI.MainExploreFragment o-- co.siarhei.apps.android.geochat.UI.Adapters.UserAdapter : usersAdapter
  co.siarhei.apps.android.geochat.UI.MainThisAreaFragment -up-|> androidx.fragment.app.Fragment
  co.siarhei.apps.android.geochat.UI.MainThisAreaFragment o-- co.siarhei.apps.android.geochat.MainActivity : mainActivity
  co.siarhei.apps.android.geochat.UI.MainThisAreaFragment o-- co.siarhei.apps.android.geochat.UI.Adapters.RvMessageAdapter : messageAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
